objects/CS_SerContOpptyNotifMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SourceFieldApi__c</fullName>
        <label>SourceFieldApi</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFieldApi__c</fullName>
        <label>TargetFieldApi</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SerContOpptyNotificationMapping</label>
</CustomObject>